fixed powerpoint embed to not show on smaller screens

--- a/css/custom.css
+++ b/css/custom.css
@@ -248,12 +248,14 @@ a.aboutlink:hover {
 }
 
 #powerpoint {
-	margin-bottom: 15px;
-	margin-top: 15px;
+	margin-bottom: 20px;
+	margin-top: 20px;
 }
 
-#last-section {
-	padding-bottom: 600px;
+@media only screen and (max-width: 1026px) {
+    #powerpoint {
+        display: none;
+    }
 }
 
 #redesign-intro-pic, #redesign-intro-pic2, #redesign-intro-pic3, #redesign-intro-pic4 {
